--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,25 @@
 
-*{
+/* *{
   margin:0 !important;
-  
-  
+} */
+html, body, #root, #root>div {
+  height: 100vh;
+  margin: 0;
 }
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+nav{
+  background-color: white;
+  text-align: right;
 }
