--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,8 @@
 
-/* *{
+*{
   margin:0 !important;
-} */
-html, body, #root, #root>div {
-  height: 100vh;
-  margin: 0;
 }
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
