--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,13 @@
 
-*{
-  margin:0 !important;
+html, body, #root, #root>div {
+  height: 100vh;
 }
+
+*{
+  margin: 0 !important;
+}
+
+
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
