--- a/src/index.css
+++ b/src/index.css
@@ -1,28 +1,28 @@
 
-html, body, #root, #root>div {
+/* html, body, #root, #root>div {
   height: 100vh;
 }
 
 *{
   margin: 0 !important;
-}
+} */
 
 
 
-body {
+/* body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+} */
 
-code {
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
 
-nav{
+/* nav{
   background-color: white;
   text-align: right;
-}
+} */
