--- a/src/cert.css
+++ b/src/cert.css
@@ -3,21 +3,21 @@
   }
   .cert {
     font-family: "Hachi Maru Pop", cursive;
-    display: flex;
+    display: grid;
     padding: 15px;
   }
-  .cert .Meta {
+  /* .cert .Meta {
     flex-grow: 1;
     padding-right: 15px;
-  }
-  .cert .Meta input {
+  } */
+  /* .cert .Meta input {
     font-family: inherit;
     padding: 5px;
     width: 100%;
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.25);
     border: 2px solid rgba(0, 0, 0, 0.25);
     border-radius: 5px;
-  }
+  } */
   .cert .Meta button {
     padding: 10px 15px;
     border: 2px solid #87ceeb;
@@ -27,9 +27,11 @@
     border-radius: 10px;
     cursor: pointer;
   }
-  .cert #downloadWrcerter {
-    padding: 20px;
-  }
+  /* .cert #downloadWrcerter {
+    height: 100px;
+    width: 100px;
+   
+  } */
   .cert #certificateWrcerter {
     box-shadow: 0 0 5px #000;
     border-radius: 10px;
